Fixed aside margins on mobile

--- a/style.css
+++ b/style.css
@@ -732,7 +732,7 @@ footer {
 
   aside {
     width: 100%;
-    padding: 0 3rem;
+    padding: 0 1rem;
   }
 
   .related-stories-section {
